system/mailserver/deployment-autodiscover.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-mailserver-autodiscover
  labels:
    app.kubernetes.io/name: docker-mailserver-autodiscover
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: docker-mailserver-autodiscover
  template:
    metadata:
      labels:
        app.kubernetes.io/name: docker-mailserver-autodiscover
    spec:
      containers:
        - name: mailserver-autodiscover
          image: monogramm/autodiscover-email-settings:latest
          ports:
            - containerPort: 8000
              protocol: TCP
              name: autodiscover
          livenessProbe:
            tcpSocket:
              port: autodiscover
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 50m
              memory: 64Mi
