system/mailserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-mailserver
  labels:
    app.kubernetes.io/name: docker-mailserver
spec:
  type: ClusterIP
  ports:
    - port: 25
      targetPort: smtp-transfer
      protocol: TCP
      name: smtp-transfer

    - port: 587
      targetPort: smtp-sub
      protocol: TCP
      name: smtp-sub
    - port: 465
      targetPort: smtp-subs
      protocol: TCP
      name: smtp-subs

    - port: 143
      targetPort: imap
      protocol: TCP
      name: imap
    - port: 993
      targetPort: imaps
      protocol: TCP
      name: imaps
  selector:
    app.kubernetes.io/name: docker-mailserver
