system/mailserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-mailserver
  labels:
    app.kubernetes.io/name: docker-mailserver
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: mail.mbund.org
    hajimari.io/enable: "false"
spec:
  ingressClassName: public
  rules:
    - host: &host1 autoconfig.mbund.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-mailserver-autodiscover
                port:
                  number: 8000
    - host: &host2 autodiscover.mbund.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-mailserver-autodiscover
                port:
                  number: 8000
  tls:
    - secretName: mailserver-tls-certificate
      hosts:
        - *host1
        - *host2
